[gd_scene load_steps=2 format=3 uid="uid://cfhtxx7iaeigf"]

[ext_resource type="Script" uid="uid://rgeqbknrvu7u" path="res://Scripts/pages/select_deck.gd" id="1_tu0rh"]

[node name="SelectDeck" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tu0rh")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0295139
anchor_top = 0.166667
anchor_right = 0.530382
anchor_bottom = 0.742284
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="Voltar" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.0217014
anchor_top = 0.867284
anchor_right = 0.222222
anchor_bottom = 0.962963
text = "voltar
"
metadata/_edit_use_anchors_ = true

[node name="JOGAR" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75434
anchor_top = 0.867284
anchor_right = 0.954861
anchor_bottom = 0.962963
disabled = true
text = "jogar
"
metadata/_edit_use_anchors_ = true

[node name="SeeAlb" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.826389
anchor_top = 0.746914
anchor_right = 0.957465
anchor_bottom = 0.819444
disabled = true
text = "Ver Album"
metadata/_edit_use_anchors_ = true

[node name="SeeRanking" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.672743
anchor_top = 0.746914
anchor_right = 0.803819
anchor_bottom = 0.819444
disabled = true
text = "Ver Rank"
metadata/_edit_use_anchors_ = true

[node name="Descrição" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.646701
anchor_top = 0.160494
anchor_right = 0.965277
anchor_bottom = 0.745371
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Descrição"]
layout_mode = 0
anchor_left = 0.027248
anchor_top = -0.189944
anchor_right = 0.564033
anchor_bottom = -0.0195531
offset_right = 1.52588e-05
theme_override_font_sizes/font_size = 40
text = "Descrição:"
metadata/_edit_use_anchors_ = true

[node name="DescText" type="Label" parent="Descrição"]
layout_mode = 0
anchor_left = 0.0463215
anchor_top = 0.0418994
anchor_right = 0.959128
anchor_bottom = 0.941341
autowrap_mode = 2
clip_text = true
metadata/_edit_use_anchors_ = true

[node name="albComplete" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.178819
anchor_top = 0.115741
anchor_right = 0.301216
anchor_bottom = 0.151235
text = "Album: null/null"
metadata/_edit_use_anchors_ = true

[node name="maPont" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.307292
anchor_top = 0.115741
anchor_right = 0.480035
anchor_bottom = 0.151235
offset_right = -20.0
text = "Maior pontuação = null"
metadata/_edit_use_anchors_ = true

[node name="nomeDeck" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0329861
anchor_top = 0.12037
anchor_right = 0.0694444
anchor_bottom = 0.155864
text = "None"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="JOGAR" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="SeeAlb" to="." method="_on_see_alb_pressed"]
[connection signal="pressed" from="SeeRanking" to="." method="_on_see_ranking_pressed"]
